--- a/styles/style.css
+++ b/styles/style.css
@@ -13,12 +13,33 @@ body {
     align-items: center;
 }
 
-#etch-table {
-    width: 80%;
+/*TITLE*/
+
+h1 {
+    font-size: x-large;
+}
+
+/*BOARD*/
+
+#container {
+    width: 50%;
     height: 80%;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    border: thick ridge red;
+    background-color: red;
+}
+
+#etch-table {
+    width: 95%;
+    height: 90%;
+
     background-color: white;
-    border: thick solid black;
+    border: thick ridge black;
 
     display: grid;
     grid-template-columns: repeat(16, 1fr);
@@ -33,4 +54,66 @@ body {
     height : 100%;
     background-color: black;
     opacity: 0;
+}
+
+#eraser-panel {
+    width: 100%;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#eraser {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 50%; /* Full-width */
+    height: 10px; /* Specified height */
+    background: white; /* Grey background */
+    outline: none; /* Remove outline */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+}
+
+#eraser:hover {
+    opacity: 1;
+}
+
+#eraser::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 25px; /* Set a specific slider handle width */
+    height: 100%; /* Slider handle height */
+    background: gray; /* Green background */
+    cursor: pointer; 
+
+    border-radius: 35%;
+}
+
+#eraser::-moz-range-thumb {
+    width: 25px; /* Set a specific slider handle width */
+    height: 250%; /* Slider handle height */
+    background: gray; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+    border-radius: 35%;
+}
+
+/*PREFERENCES MENU*/
+
+#preferences {
+    position: fixed;
+    right: 0px;
+    top: 25%;
+    padding: 2% 2%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    background-color: lightgray;
+}
+
+#new-table-btn {
+    margin: 5%;
 }
