--- a/styles/style.css
+++ b/styles/style.css
@@ -9,14 +9,35 @@ body {
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+
+    background-image: url(../assets/img/wooden-table.jpg); 
+    /* Photo by FWStudio from Pexels */    
+
+    font-family: Prata;
+    font-size: 14px;
 }
 
-/*TITLE*/
+@font-face {
+    font-family: Prata;
+    src: url(../assets/fonts/Prata-Regular.ttf);
+}
+
+/*HEADER*/
+
+header {
+    width: 100%;
+    text-align: center;
+
+    padding: 12px;
+
+    background-color: rgb(187, 197, 170);
+}
 
 h1 {
     font-size: x-large;
+    font-weight: bolder;
 }
 
 /*BOARD*/
@@ -30,8 +51,10 @@ h1 {
     justify-content: space-evenly;
     align-items: center;
 
-    border: thick ridge red;
-    background-color: red;
+    border: 2px ridge rgba(254, 98, 29, 0.9);
+    background-color: rgba(254, 98, 29, 1);
+    box-shadow: 4px 4px rgba(230, 238, 214, 0.3);
+    border-radius: 12px;
 }
 
 #etch-table {
@@ -39,7 +62,7 @@ h1 {
     height: 90%;
 
     background-color: white;
-    border: thick ridge black;
+    border: 3px ridge black;
 
     display: grid;
     grid-template-columns: repeat(16, 1fr);
@@ -101,19 +124,37 @@ h1 {
 
 /*PREFERENCES MENU*/
 
+h2 {
+    text-align: center;
+    font-size: x-large;
+    padding-bottom: 16px;
+}
+
 #preferences {
     position: fixed;
-    right: 0px;
+    right: 4%;
     top: 25%;
-    padding: 2% 2%;
+    padding: 16px 32px;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: left;
 
-    background-color: lightgray;
+    background-image: url(../assets/img/whitepage.jpeg);
+    box-shadow: -2px 2px grey;
 }
 
 #new-table-btn {
     margin: 5%;
+}
+
+/*FOOTER*/
+
+footer {
+    width: 100%;
+    text-align: center;
+    padding: 12px;
+
+    background-color: rgb(187, 197, 170);
 }
